...
        if !NSApp.isActive {
            NSApp.activate(ignoringOtherApps: true)
        }

        if prompt {
            let alert = NSAlert()
            alert.messageText = "Move to Applications folder"
            alert.informativeText =
                "\(Bundle.main.localizedName) needs to move to your Applications folder in order to work properly."
            if needAuth {
                alert.informativeText.append(
                    " You need to authenticate with your administrator password to complete this step.")
            }
...
